--- a/app/src/main/res/layout/list_item_sound.xml
+++ b/app/src/main/res/layout/list_item_sound.xml
@@ -16,7 +16,7 @@
         android:id="@+id/sound_button"
         android:layout_gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="60dp"
         android:onClick="@{()->viewModel.onButtonClicked()}"
         android:text="@{viewModel.title}"
         />
